--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Łukasz Biernacki</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" media="(min-width: 650px)" href="css/desk.css">
