--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="pl" dir="ltr">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PXWWCCJ37F"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PXWWCCJ37F');
+    </script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Łukasz Biernacki</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" media="(min-width: 650px)" href="css/desk.css">
     <link rel="stylesheet" media="(max-width: 650px)" href="css/mobile.css">
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   </head>
@@ -122,7 +134,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
   <script src="node_modules/lax.js/lib/lax.min.js"></script>
+  <script src="node_modules/snapsvg/dist/snap.svg-min.js"></script>
 
+  <script type="text/javascript" src="snap.js"></script>
   <script type="text/javascript" src="animation_mobile.js"></script>
   <script type="text/javascript" src="animation_desktop.js"></script>
 
