--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" media="(min-width: 650px)" href="css/desk.css">
     <link rel="stylesheet" media="(max-width: 650px)" href="css/mobile.css">
-
+    <link rel="icon" href="img/ICO.png" type="image/x-icon">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   </head>
@@ -84,24 +84,13 @@
       </p>
 
 
-      <a href="https://www.instagram.com/lukaszbiernacki_/" target="_blank"><button id="button2" class="actual_work actual_work--white">Instagram:</button></a>
+      <a href="https://www.instagram.com/lukaszbiernacki_/" target="_blank"> <button id="button2" class="actual_work actual_work--white">  Instagram: </button> </a>
 
 
     </div>
 
     <div id="img" class="mosaic">
-
-        <img src='img/del.jpg' class="mosaic_item">
-        <img src='img/ear.jpg' class="mosaic_item">
-        <img src='img/kaw.jpg' class="mosaic_item">
-        <img src='img/kob.jpg' class="mosaic_item">
-        <img src='img/lak.jpg' class="mosaic_item">
-
-        <img src='img/lak.jpg' class="mosaic_item">
-        <img src='img/kob.jpg' class="mosaic_item">
-        <img src='img/kaw.jpg' class="mosaic_item">
-        <img src='img/ear.jpg' class="mosaic_item">      
-        <img src='img/del.jpg' class="mosaic_item">
+      <img src="img/mozika.jpg" class="mosaic_item" alt="">
         
     </div>
 
@@ -116,11 +105,28 @@
       <img class="examples_item" src="img/kob.jpg"> 
       <img class="examples_item" src="img/lak.jpg"> 
       <img class="examples_item" src="img/ear.jpg"> 
+      <img class="examples_item" src="img/plak.jpg"> 
+      <img class="examples_item" src="img/hub.jpg"> 
+      <img class="examples_item" src="img/plak2.jpg"> 
+      <img class="examples_item" src="img/log.jpg"> 
+      <img class="examples_item" src="img/ebok.jpg"> 
+      <img class="examples_item" src="img/il.jpg"> 
     </div>
   </div>
 
-    <!-- Kontakt -->
-    
+
+  <!-- Kontakt -->
+
+  <div class="kontakt">
+
+    <h1>Kontakt</h1>
+
+    <p class="text_kontakt">
+      <a id="mail"> Mail: lukaszbiernacki02@gmail.com </a>
+    </p>
+
+  </div>
+
   <footer>
 
     <div class="footer_info">
@@ -137,5 +143,6 @@
 
   <script type="text/javascript" src="animation_mobile.js"></script>
   <script type="text/javascript" src="animation_desktop.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 
 </html>
