--- a/index.html
+++ b/index.html
@@ -50,22 +50,25 @@
     <h1 id="headline_1">Hej!</h1>
 
     <p class="text">
-      Nazywam się Łukasz. <br>
-      Zajmuję się grafiką, web designem,
+      Nazywam się Łukasz. Zajmuję się grafiką komputerową, web designem,
       kodowaniem, montażem video i wieloma innymi. <br>
-      Bliskie jest mi programowanie,
-      jak i umiejętności miękkie takie jak rysowanie.
-      Stąd też chciałbym kontynuwać moją karierę w kiernuku 
-      grafiki i web designu. <br> 
-      Interesuję się tematyką Big Data,
-      cały czas się szkolę w tym temacie, chciałbym w przyszłości 
-      tworzyć projekty w oparciu o big data. <br>
-      Masowo czytam literaturę faktu, oglądam masę dokumentów
-      uwielbiam historię zwykłych ludzi.
+      Interesuję się zarówno technologią jak i sztuką,
+      dlatego rozwijam się jako grafik.
+      Chętnie podejmę się nieszablonowych projektów,
+      zaprojektuję lub zmienię logo, stworzę identyfikację wizualną
+      i zakoduję stronę wizytówkę.
+      <br> <br>
+      W wolnym czasie masowo czytam literaturę faktu,
+      interesuję się tematem big data, który chciałbym w przyszłości
+      wprowadzać w moje projekty.
+      <br><br>
+      By poznać mnie lepiej, zapraszam do odwiedzenia mojego kanału na youtube.
 
     </p>
 
-    <a href="https://www.youtube.com/watch?v=hJLNDmqJm3w" target="_blank"><button id="button1" class="actual_work">Poznaj mnie na youtube:</button></a>
+    <a href="https://www.youtube.com/watch?v=hJLNDmqJm3w" target="_blank">
+      <button id="button1" class="actual_work">Poznaj mnie na youtube:</button>
+    </a>
 
     </div>
 
@@ -76,15 +79,22 @@
 
       <h1 id="headline_2">Projekty</h1>
       <p class="text" id="text_2">
-        Zaraz pokażą się moje przykładowe realizacje.
-        Niestety nie jestem w stanie umieścić wszystkich 
-        na tej stronie. <br>
-        Możecie śledzić moje projekty na instagramie i behance.
+      Na stronce zostawiam widokówki na projekty.
+      Na instagramie pojawiają się aktualności i czasami luźniejsze
+      prace. Na portalu behance publikuję coraz więcej
+      projektów, z wyjaśnieniami i dopisakmi.
 
       </p>
 
 
-      <a href="https://www.instagram.com/lukaszbiernacki_/" target="_blank"> <button id="button2" class="actual_work actual_work--white">  Instagram: </button> </a>
+      <a href="https://www.instagram.com/lukaszbiernacki_" target="_blank">
+        <button id="button2" class="actual_work actual_work--white">Instagram:</button>
+      </a>
+
+      
+      <a href="https://www.behance.net/lukaszbiernacki" target="_blank">
+        <button id="button2" class="actual_work actual_work--white actual_work--low">Behance:</button>
+      </a>
 
 
     </div>
@@ -101,7 +111,7 @@
   <div id="examples" class="examples">
       <img class="examples_item" src="img/ear.jpg"> 
       <img class="examples_item" src="img/kaw.jpg"> 
-      <img class="examples_item" src="img/del.jpg"> 
+      <img class="examples_item" src="img/dzien kobiet.jpg"> 
       <img class="examples_item" src="img/kob.jpg"> 
       <img class="examples_item" src="img/lak.jpg"> 
       <img class="examples_item" src="img/ear.jpg"> 
@@ -121,9 +131,10 @@
 
     <h1>Kontakt</h1>
 
-    <p class="text_kontakt">
-      <a id="mail"> Mail: lukaszbiernacki02@gmail.com </a>
-    </p>
+    <div class="kontakt_text">
+      <p>Mail:</p>
+      <p class="mail" id="mail">lukaszbiernacki02@gmail.com </p>
+    </div>
 
   </div>
 
