--- a/projekty/projekty.html
+++ b/projekty/projekty.html
@@ -14,7 +14,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Łukasz Biernacki - blog</title>
+    <title>Łukasz Biernacki - logo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" media="(min-width: 650px)" href="css/desk.css">
     <link rel="stylesheet" media="(max-width: 650px)" href="css/mobile.css">
@@ -30,27 +30,17 @@
     </div>
 
     <header>
-        
-        <img src="../img/kro.jpg">
-        <h1>Projektowanie graficzne z mniejszym sladem węglowym</h1>
+        <img src="../img/log.jpg">
+        <h1>Projekt logo z identyfikacją wizualną</h1>
     </header>
 
 
     <h2>
-      Ile emitujemy i jak?
+      O projekcie
     </h2>
 
     <p class="text">
-      
-      Każdy nasz ruch w sieci jest powiązany ze śladem węglowym. 
-      W dużym skrócie, chodzi o zużycie energii potrzebnej do utrzymania serwerowni, 
-      czyli mega prądożerców, którym energia jest potrzebna nie tylko do zasilania, 
-      ale też do klimatyzowania. Istnieją już rozwiązania minimalizujące ślad węglowy. 
-      Jedną z nich jest systemowa zamiana źródeł energii na odnawialną lub atomową. 
-      Inną opcją są lokalne dostosowania jak na Islandii, na której prąd 
-      uzyskuję się z źródeł termalnych, a szybko nagrzewające się serwerownie 
-      chłodzi arktycznym powietrzem. Istnieją już startupy, oferujące 
-      “zielony hosting” są one droższe, ale dają wybór.
+      Projekt logo dla architekti 
 
     </p>
 
