--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
 
 
       <div id="karty1" class="element">
-        <img class="obrazek" src="img/pieing.jpg">
+        <img class="obrazek" src="img/transparent.png">
 
         <div class="reakcja">
 
-        <h2 class="reakcja-item">Logo</h2>
+        <h2 class="reakcja-item">Branding</h2>
 
-        <a id="button-more" class="reakcja-item" href="https://www.behance.net/gallery/112096563/Logofolio" target="_blank">
+        <a id="button-more" class="reakcja-item" href="https://www.behance.net/gallery/136219797/Transparent-Neighbors-garden" target="_blank">
            <p>więcej</p>
         </a> 
        </div>
@@ -167,11 +167,11 @@
       </div>
 
       <div id="karty2"  class="element">
-        <img class="obrazek" src="img/ebok.jpg">
+        <img class="obrazek" src="img/pieing.jpg">
 
         <div class="reakcja">
 
-        <h2 class="reakcja-item">Skład tekstu</h2>
+        <h2 class="reakcja-item">Logo</h2>
         <a class="reakcja-item" href="https://www.behance.net/gallery/115205725/Las-Forest-ebook" target="_blank">
            <p>więcej</p>
         </a>
@@ -181,12 +181,12 @@
       </div>
 
       <div id="karty3" class="element">
-        <img class="obrazek" src="img/del.jpg">
-
+        <img class="obrazek" src="img/gniecione.jpeg">
+        
         <div class="reakcja">
 
-        <h2 class="reakcja-item">Ilustracje</h2>
-        <a class="reakcja-item" href="https://www.behance.net/gallery/129780189/October-illustrations" target="_blank">
+        <h2 class="reakcja-item">Design</h2>
+        <a class="reakcja-item" href="https://www.behance.net/gallery/131702425/Gniecione" target="_blank">
            <p>więcej</p>
         </a>
 
@@ -203,37 +203,16 @@
     <div class="karty">
 
 
-      <div id="karty1" class="element">
-        <img class="obrazek" src="img/kro.jpg">
-
-        <div class="reakcja">
-
-        <h2 class="reakcja-item"></h2>
-
-       </div>
-
+      <div id="karty1" class="element--photo">
+        <img class="obrazek2" src="img/del.jpg">
       </div>
 
-      <div id="karty2"  class="element">
-        <img class="obrazek" src="img/pok.png">
-
-        <div class="reakcja">
-
-        <h2 class="reakcja-item"></h2>
-
-       </div>
-
+      <div id="karty2"  class="element--photo">
+        <img class="obrazek2" src="img/ebok.jpg">
       </div>
 
-      <div id="karty3" class="element">
-        <img class="obrazek" src="img/pan.png">
-
-        <div class="reakcja">
-
-        <h2 class="reakcja-item"></h2>
-
-       </div>
-
+      <div id="karty3" class="element--photo">
+        <img class="obrazek2" src="img/pan.png">
       </div>
 
     </div>
@@ -244,36 +223,18 @@
     <div class="karty">
 
 
-      <div id="karty1" class="element">
-        <img class="obrazek" src="img/log.jpg">
-
-        <div class="reakcja">
-
-        <h2 class="reakcja-item"></h2>
-
-       </div>
+      <div id="karty1" class="element--photo">
+        <img class="obrazek2" src="img/kro.jpg">
 
       </div>
 
-      <div id="karty2"  class="element">
-        <img class="obrazek" src="img/kaw.jpg">
-
-        <div class="reakcja">
-
-        <h2 class="reakcja-item"></h2>
-
-       </div>
+      <div id="karty2"  class="element--photo">
+        <img class="obrazek2" src="img/kaw.jpg">
 
       </div>
 
-      <div id="karty3" class="element">
-        <img class="obrazek" src="img/plak.jpg">
-
-        <div class="reakcja">
-
-        <h2 class="reakcja-item"></h2>
-
-       </div>
+      <div id="karty3" class="element--photo">
+        <img class="obrazek2" src="img/game.png">
 
       </div>
 
